--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@ background-color: peachpuff;
   margin: 0;
   padding: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  height: 500vh;
+  height: 200vh;
 
 }
 .galletas-contenedor {
