--- a/src/components/Header/Header2.css
+++ b/src/components/Header/Header2.css
@@ -33,7 +33,7 @@ html {
 /*               HEADER               */
 /* ********************************** */
 .container-hero {
-    background-color: var(--background-color);
+    background-color: #BD8579;
 }
 
 .hero {
