--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,33 +1,49 @@
-.banner{
- background-image: url(https://assets.ongoody.com/store/products/image/9nTdeykkWASaW2AUghwPErukS9EgGmDS.png?width=800&format=webp);
+.banner {
+ position: relative;
  height: 60rem;
  background-size: cover;
  background-position: center;
 }
-.content-banner{
+
+.banner::before {
+ content: "";
+ position: absolute;
+ top: 0;
+ left: 0;
+ right: 0;
+ bottom: 0;
+ background-image: url(https://assets.ongoody.com/store/products/image/9nTdeykkWASaW2AUghwPErukS9EgGmDS.png?width=800&format=webp);
+ background-size: cover;
+ background-position: center;
+ filter: blur(5px);
+ z-index: -1; /* Asegura que la imagen se quede detrás del contenido */
+}
+
+.content-banner {
+ position: relative;
  max-width: 90rem;
  margin: 0 auto;
  padding: 25rem 0;
 }
-.content-banner p{
 
- color:var(--primary-color);
- background-color: #0033cc;
+.content-banner p {
+ color: var(--primary-color);
  font-size: 3.5rem;
  margin-bottom: 1rem;
  font-weight: 500;
 }
-.content-banner h2{
- background-color: #0033cc;
- color:#ffffff;
+
+.content-banner h2 {
+ color: #ffffff;
  font-size: 3.5rem;
  font-weight: 500;
  line-height: 1.2;
 }
-.content-banner a{
+
+.content-banner a {
  margin-top: 2rem;
  text-decoration: none;
- color:#ffffff;
+ color: #ffffff;
  background-color: var(--primary-color);
  display: inline-block;
  padding: 1rem 3rem;
