--- a/src/components/Contacto/Contacto.css
+++ b/src/components/Contacto/Contacto.css
@@ -3,8 +3,9 @@
     background-color: darksalmon;
 }
 .primerdiv h1{
-    padding-top: 6rem;
-    font-size: 30px;
+    padding-top: 1rem;
+    font-size: 35px;
+    color: black;
 }
 .primerdiv p{
     margin: 50px;
